Update dependencies and move to java 11